# nuttycom.github.io

./: .gitignore  about.html  about.rst  archive.html  contact.html  contact.markdown  index.html  logji.cabal  stack.yaml  the_strange_case_of_partial_functions.md
css/: default.css
posts/: 2009-04-21-deconstructoring_scala.html  2009-04-21-deconstructoring_scala.md  2009-09-29-composable_bindings_in_lift.html  2009-09-29-composable_bindings_in_lift.md  2009-11-07-composable_bindings_in_lift_ii.html  2009-11-07-composable_bindings_in_lift_ii.md  2009-12-02-option_cata.html  2009-12-02-option_cata.md  2009-12-08-monadic_visitor.html  2009-12-08-monadic_visitor.md  2010-02-03-on_extraction.html  2010-02-03-on_extraction.md  2010-02-05-keyword_escape.html  2010-02-05-keyword_escape.md  2010-07-29-failure_tolerant_monad.html  2010-07-29-failure_tolerant_monad.md  2012-02-18-correcting_the_visitor_pattern.html  2012-02-18-correcting_the_visitor_pattern.md  2012-11-29-f_bounded_polymorphism_give_up_now.html  2012-11-29-f_bounded_polymorphism_give_up_now.md  2014-02-12-the_abstract_future.html  2014-02-12-the_abstract_future.md  2015-07-15-what_is_and_what_means.html  2015-07-15-what_is_and_what_means.md  2016-07-08-the_strange_case_of_partial_functions.html  2016-07-08-the_strange_case_of_partial_functions.md  2017-01-20-fair_voting.html  2017-01-20-fair_voting.md  2019-08-22-records_of_functions.html  2019-08-23-micro_winston_mtg.html  2019-08-23-micro_winston_mtg.md
templates/: default.html  post.html
